[package]
name = "hierrorchy"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Proc macro library to simplify the definition of error hierarchies."
repository = "https://github.com/asperan/hierrorchy"
readme = "README.md"
keywords = ["error", "hierarchy", "tree" , "macro"]
categories = ["rust-patterns", "data-structures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full"] }

[dev-dependencies]
rand = "0.8.5"
